--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://your-username.github.io/portf",
+  "homepage": "https://github.com/akhilk27/MyWebsite.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
